[tool.poetry]
name = "sns-sdk-python"
version = "0.1.0"
description = ""
authors = ["Clément Coutet <clement.coutet@grenoble-inp.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
solders = "0.21.0"
solana = "^0.35.1"
pytest = "^8.3.3"
borsh-construct = "^0.1.0"
pytest-asyncio = "^0.24.0"
ruff = "^0.7.4"
mypy = "^1.13.0"
pynacl = "^1.5.0"
base58 = "^2.1.1"
bech32 = "^1.2.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


